--- a/src/pokemon.html
+++ b/src/pokemon.html
@@ -6,9 +6,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <link rel="stylesheet" href="src/app.css" />
-    <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-    <script defer src="dist/index.js"></script>
+    <link rel="stylesheet" href="app.css" />
+    <script defer type="module" src="../dist/pokemon.js"></script>
 </head>
 
 <body>
@@ -16,27 +15,6 @@
         <h1><a href="/">Pokemon Library</a></h1>
     </header>
     <main>
-        <!-- <div class="card">
-            <div class="pokemon-details">
-                <h2>Magikarp</h2>
-                <figure>
-                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/shiny/129.png"
-                        alt="It's Magikarp." />
-                </figure>
-                <div class="text">
-                    <ul class="abilities">
-                        <li>
-                            <span class="ability-name">Swift Swim</span>
-                            <span class="ability-short-description">Raises SPEED in rain.</span>
-                        </li>
-                        <li>
-                            <span class="ability-name">Rattled</span>
-                            <span class="ability-short-description">Some move types scare it and boost its Speed.</span>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div> -->
     </main>
 
 </body>
