--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
   <main>
     <h2>Pokemon</h2>
     <ul class="pokemon"></ul>
+    <img class="spinner" src="https://c.tenor.com/I6kN-6X7nhAAAAAj/loading-buffering.gif" alt="Loading Spinner">
   </main>
 </body>
 
