--- a/src/pokemon.html
+++ b/src/pokemon.html
@@ -16,7 +16,7 @@
     </header>
     <main>
     </main>
-
+    <img class="spinner" src="https://c.tenor.com/I6kN-6X7nhAAAAAj/loading-buffering.gif" alt="Loading Spinner">
 </body>
 
 </html>
